@@ -41,7 +41,7 @@ public:
     virtual CSeasonalTime* clone() const = 0;
 
     //! Initialize from a string created by persist.
-    virtual bool fromString(const std::string& value) = 0;
+    virtual bool fromString(std::string value) = 0;
 
     //! Convert to a string.
     virtual std::string toString() const = 0;
@@ -123,6 +123,10 @@ public:
     //! Get a checksum for this object.
     virtual uint64_t checksum(uint64_t seed = 0) const = 0;
 
+protected:
+    double precedence() const;
+    void precedence(double precedence);
+
 private:
     //! Get the start of the repeat interval beginning at
     //! \p offset including \p time.
@@ -161,7 +165,7 @@ public:
     CDiurnalTime* clone() const;
 
     //! Initialize from a string created by persist.
-    virtual bool fromString(const std::string& value);
+    virtual bool fromString(std::string value);
 
     //! Convert to a string.
     virtual std::string toString() const;
@@ -208,7 +212,7 @@ public:
     CGeneralPeriodTime* clone() const;
 
     //! Initialize from a string created by persist.
-    virtual bool fromString(const std::string& value);
+    virtual bool fromString(std::string value);
 
     //! Convert to a string.
     virtual std::string toString() const;
