@@ -42,6 +42,9 @@
 
 Fix cause of "Sample out of bounds" error message (See {ml-pull}355[355].}
 
+Restore from checkpoint could damage seasonality modeling. For example, it could
+cause seasonal components to be overwritten in error. (See {ml-pull}821[#821].)
+
 === Regressions
 
  == {es} version 6.5.3
